--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav>
   <a href="aboutme/index.html">About Me Page</a>             
   <a href="wwr/index.html">White Water Rafting Website</a>
-  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
@@ -54,7 +54,7 @@
         <a class='join' href="rivers.html">Join Us</a>
 </main>
 <footer>
-    <p>Dry Oar &copy; 2023 - Your Paul and Asada Here</p>
+    <p>Dry Oar &copy; 2023 - Your first and last name Here</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
