--- a/stainerzconcept/site-plan.html
+++ b/stainerzconcept/site-plan.html
@@ -125,29 +125,33 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        We describe this as the initial point of contact between the company and the website visitors. It can be a home page or any other page. As the reception of your brick-and-mortar office, it is the welcoming room. It can either make the prospect want to hang around and learn more or send them straight to the close button. Unlike your reception, there will be no one to stop them, there is no receptionist whose warm smile might make them want to give you a second chance.
+        So, I will have to make my page speak for itself. I will use color, design and well-placed texts to get and hold the attention of the visitor and direct them to act. But more importantly, I will use a knowledge of why the visitor is there to preempt and answer their questions.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/homepage.jpg" alt="image for homepage">
+        <img src="images/pexels-rachel-claire-4846106.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[About page ]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        This page will further enhance and create a more creative brochure of different types of jobs done and expresses a forum of professionalism when contracts are awarded, they will also be serveral avenues to further engage vistors to further explore the website to consider clicking on the request for job link.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/equip.jpg" alt="About page">
+        <img src="images/rsz_pexels-tima-miroshnichenko-6196688.jpg" alt="About page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>< Facilities and blog</h3>
       <p>
-        [Written copy for the Page 3 here]
+       Closely link to the about page will be a facility page, visitor will likely want to continue further when they see that every bit of the company and exercises conducted in it has the right equipment for the job. This page further creates a live and pictoral representation of how the company operated and look in general.
+       Blog
+        This is to get new clients, and to retain old customers. Giving them something to look forward to each week, talking about what finished project and events and ways on how  modernized method are fused into the company mandate.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/istockphoto-523388322-612x612.jpg" alt="image for page3">
+        <img src="images/istockphoto-1337610876-612x612.jpg" alt="image for page3">
 
       </ul>
       <hr>
