--- a/stainerzconcept/site-plan.html
+++ b/stainerzconcept/site-plan.html
@@ -150,8 +150,8 @@
         This is to get new clients, and to retain old customers. Giving them something to look forward to each week, talking about what finished project and events and ways on how  modernized method are fused into the company mandate.
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/istockphoto-523388322-612x612.jpg" alt="image for page3">
-        <img src="images/istockphoto-1337610876-612x612.jpg" alt="image for page3">
+        <img src="images/istockphoto-523388322-612x612.jpg" alt="Facilities and blog">
+        <img src="images/istockphoto-1337610876-612x612.jpg" alt="facilities and blog">
 
       </ul>
       <hr>
