--- a/stainerzconcept/site-plan.html
+++ b/stainerzconcept/site-plan.html
@@ -165,19 +165,20 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Screenshot 2023-03-24 181024.png" alt="home page wireframe">
+      <img src="images/Screenshot 2023-03-24 181036.png" alt="home page wire frame ">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Screenshot 2023-04-01 164341.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Screenshot 2023-04-01 163441.png" alt="page 3 wireframe">
     </main>
   </body>
 
