--- a/stainerzconcept/stanerz.html
+++ b/stainerzconcept/stanerz.html
@@ -15,7 +15,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about_page.html">About</a>
+                <a href="about_page.html">About us</a>
                 <a href="contactus.html">contact us</a>
                 <a href="site-plan.html">site plan</a>
                 <div class="container">
@@ -28,7 +28,6 @@
 
         </header>
         <section>
-          <img class="painting-img" src="images/dream_house.jpg" alt="dream house">
              <p>
                   You are welcome to Stainerz concept limited!!!
              </p> 
